--- a/package.json
+++ b/package.json
@@ -8,10 +8,13 @@
     "@nestjs/common": "^9.0.0",
     "@nestjs/core": "^9.0.0",
     "@nestjs/platform-express": "^9.0.0",
+    "@nestjs/typeorm": "^9.0.1",
     "axios": "^1.0.0",
+    "mysql2": "^3.2.4",
     "reflect-metadata": "^0.1.13",
     "rxjs": "^7.0.0",
-    "tslib": "^2.3.0"
+    "tslib": "^2.3.0",
+    "typeorm": "^0.3.15"
   },
   "devDependencies": {
     "@nestjs/schematics": "^9.0.0",
