--- a/package.json
+++ b/package.json
@@ -5,12 +5,17 @@
   "scripts": {},
   "private": true,
   "dependencies": {
+    "@golevelup/nestjs-rabbitmq": "^3.6.0",
     "@nestjs/common": "^9.0.0",
+    "@nestjs/config": "^2.3.1",
     "@nestjs/core": "^9.0.0",
     "@nestjs/platform-express": "^9.0.0",
     "@nestjs/typeorm": "^9.0.1",
     "axios": "^1.0.0",
+    "class-transformer": "^0.5.1",
+    "class-validator": "^0.14.0",
     "mysql2": "^3.2.4",
+    "pg": "^8.10.0",
     "reflect-metadata": "^0.1.13",
     "rxjs": "^7.0.0",
     "tslib": "^2.3.0",
@@ -28,6 +33,9 @@
     "@nrwl/nx-cloud": "latest",
     "@nrwl/webpack": "15.9.2",
     "@nrwl/workspace": "15.9.2",
+    "@nx/jest": "16.0.1",
+    "@nx/js": "16.0.1",
+    "@nx/nest": "^16.0.1",
     "@types/jest": "^29.4.0",
     "@types/node": "~18.7.1",
     "@typescript-eslint/eslint-plugin": "^5.36.1",
@@ -38,7 +46,7 @@
     "jest-environment-node": "^29.4.1",
     "nx": "15.9.2",
     "prettier": "^2.6.2",
-    "ts-jest": "^29.0.5",
+    "ts-jest": "^29.1.0",
     "ts-node": "10.9.1",
     "typescript": "~4.9.5"
   }
