--- a/.env
+++ b/.env
@@ -2,13 +2,13 @@ RABBITMQ_DEFAULT_USER=nestjs
 RABBITMQ_DEFAULT_PASS=nestjs
 RABBITMQ_USER=nestjs
 RABBITMQ_PASS=nestjs
-RABBITMQ_HOST=rabbitmq:5672
+RABBITMQ_HOST=localhost:5672
 
 POSTGRES_USER=user
 POSTGRES_PASSWORD=password
 POSTGRES_DB=movies
 POSTGRES_PORT=5432
-POSTGRES_HOST=postgres
+POSTGRES_HOST=localhost
 
 POSTGRES_URI=postgresql://${POSTGRES_USER}:${POSTGRES_PASSWORD}@${POSTGRES_HOST}:${POSTGRES_PORT}/${POSTGRES_DB}
 
