--- a/package.json
+++ b/package.json
@@ -2,7 +2,13 @@
   "name": "kinopoisk-snitch",
   "version": "0.0.0",
   "license": "MIT",
-  "scripts": {},
+  "scripts": {
+    "typeorm": "ts-node -P libs/typeorm/tsconfig.lib.json ./node_modules/typeorm/cli",
+    "typeorm:run-migrations": "npm run typeorm migration:run -- -d typeOrm.config.ts",
+    "typeorm:generate-migration": "npm run typeorm -- -d typeOrm.config.ts migration:generate ./migrations/kinopoisk",
+    "typeorm:create-migration": "npm run typeorm -- migration:create ./migrations/kinopoisk",
+    "typeorm:revert-migration": "npm run typeorm -- -d typeOrm.config.ts migration:revert"
+  },
   "private": true,
   "dependencies": {
     "@golevelup/nestjs-rabbitmq": "^3.6.0",
@@ -14,6 +20,7 @@
     "axios": "^1.0.0",
     "class-transformer": "^0.5.1",
     "class-validator": "^0.14.0",
+    "dotenv": "^16.0.3",
     "mysql2": "^3.2.4",
     "pg": "^8.10.0",
     "reflect-metadata": "^0.1.13",
