--- a/tsconfig.base.json
+++ b/tsconfig.base.json
@@ -1,25 +1,20 @@
 {
   "compileOnSave": false,
   "compilerOptions": {
-    "rootDir": ".",
-    "sourceMap": true,
-    "declaration": false,
-    "moduleResolution": "node",
-    "emitDecoratorMetadata": true,
-    "experimentalDecorators": true,
-    "useDefineForClassFields": false,
-    "importHelpers": true,
-    "target": "es2017",
-    "module": "esnext",
-    "lib": ["es2017", "dom"],
-    "skipLibCheck": true,
-    "skipDefaultLibCheck": true,
-    "baseUrl": ".",
+      "rootDir": ".",
+      "sourceMap": true,
+      "declaration": false,
+      "moduleResolution": "node",
+      "emitDecoratorMetadata": true,
+      "experimentalDecorators": true,
+      "strictPropertyInitialization": false,
+      "importHelpers": true,
+      "target": "es2017",
+      "lib": ["es2017", "dom"],
+      "skipLibCheck": true,
+      "skipDefaultLibCheck": true,
+      "baseUrl": ".",
     "paths": {
-      "@kinopoisk-snitch/rabbitmq": ["libs/rabbitmq/src/index.ts"],
-      "@kinopoisk-snitch/rabbitmq-config": [
-        "libs/rabbitmq-config/src/index.ts"
-      ],
       "@kinopoisk-snitch/typeorm": ["libs/typeorm/src/index.ts"]
     }
   },
