--- a/package.json
+++ b/package.json
@@ -7,6 +7,7 @@
   "dependencies": {
     "@nestjs/common": "^9.0.0",
     "@nestjs/core": "^9.0.0",
+    "@nestjs/microservices": "^9.4.0",
     "@nestjs/platform-express": "^9.0.0",
     "@nestjs/typeorm": "^9.0.1",
     "axios": "^1.0.0",
@@ -28,6 +29,11 @@
     "@nrwl/nx-cloud": "latest",
     "@nrwl/webpack": "15.9.2",
     "@nrwl/workspace": "15.9.2",
+    "@nx/jest": "16.0.1",
+    "@nx/js": "16.0.1",
+    "@nx/nest": "16.0.1",
+    "@nx/node": "16.0.1",
+    "@nx/webpack": "16.0.1",
     "@types/jest": "^29.4.0",
     "@types/node": "~18.7.1",
     "@typescript-eslint/eslint-plugin": "^5.36.1",
@@ -38,7 +44,7 @@
     "jest-environment-node": "^29.4.1",
     "nx": "15.9.2",
     "prettier": "^2.6.2",
-    "ts-jest": "^29.0.5",
+    "ts-jest": "^29.1.0",
     "ts-node": "10.9.1",
     "typescript": "~4.9.5"
   }
