Запись User'а в БД

--- a/tsconfig.base.json
+++ b/tsconfig.base.json
@@ -1,20 +1,22 @@
 {
   "compileOnSave": false,
   "compilerOptions": {
-      "rootDir": ".",
-      "sourceMap": true,
-      "declaration": false,
-      "moduleResolution": "node",
-      "emitDecoratorMetadata": true,
-      "experimentalDecorators": true,
-      "strictPropertyInitialization": false,
-      "importHelpers": true,
-      "target": "es2017",
-      "lib": ["es2017", "dom"],
-      "skipLibCheck": true,
-      "skipDefaultLibCheck": true,
-      "baseUrl": ".",
+    "rootDir": ".",
+    "sourceMap": true,
+    "declaration": false,
+    "moduleResolution": "node",
+    "emitDecoratorMetadata": true,
+    "experimentalDecorators": true,
+    "strictPropertyInitialization": false,
+    "importHelpers": true,
+    "target": "es2017",
+    "lib": ["es2017", "dom"],
+    "skipLibCheck": true,
+    "skipDefaultLibCheck": true,
+    "baseUrl": ".",
     "paths": {
+      "@kinopoisk-snitch/contracts": ["libs/contracts/src/index.ts"],
+      "@kinopoisk-snitch/interfaces": ["libs/interfaces/src/index.ts"],
       "@kinopoisk-snitch/typeorm": ["libs/typeorm/src/index.ts"]
     }
   },
