--- a/.env
+++ b/.env
@@ -3,6 +3,7 @@ RABBITMQ_DEFAULT_PASS=nestjs
 RABBITMQ_USER=nestjs
 RABBITMQ_PASS=nestjs
 RABBITMQ_HOST=localhost:5672
+RABBITMQ_URI=amqp://nestjs:nestjs@localhost:5672
 
 POSTGRES_USER=user
 POSTGRES_PASSWORD=password
