--- a/package.json
+++ b/package.json
@@ -15,7 +15,9 @@
     "@nestjs/common": "^9.0.0",
     "@nestjs/config": "^2.3.1",
     "@nestjs/core": "^9.0.0",
+    "@nestjs/jwt": "^10.0.3",
     "@nestjs/microservices": "^9.4.0",
+    "@nestjs/passport": "^9.0.3",
     "@nestjs/platform-express": "^9.0.0",
     "@nestjs/typeorm": "^9.0.1",
     "axios": "^1.0.0",
@@ -23,6 +25,11 @@
     "class-validator": "^0.14.0",
     "dotenv": "^16.0.3",
     "mysql2": "^3.2.4",
+    "passport": "^0.6.0",
+    "passport-google-oauth2": "^0.2.0",
+    "passport-jwt": "^4.0.1",
+    "passport-local": "^1.0.0",
+    "passport-vkontakte": "^0.5.0",
     "pg": "^8.10.0",
     "reflect-metadata": "^0.1.13",
     "rxjs": "^7.0.0",
@@ -48,6 +55,10 @@
     "@nx/webpack": "16.0.1",
     "@types/jest": "^29.4.0",
     "@types/node": "~18.7.1",
+    "@types/passport-google-oauth2": "^0.1.5",
+    "@types/passport-jwt": "^3.0.8",
+    "@types/passport-local": "^1.0.35",
+    "@types/passport-vkontakte": "^1.3.1",
     "@typescript-eslint/eslint-plugin": "^5.36.1",
     "@typescript-eslint/parser": "^5.36.1",
     "eslint": "~8.15.0",
