Add Google oath, add google, jwt guards and strategies

--- a/.env
+++ b/.env
@@ -18,6 +18,10 @@ PGADMIN_DEFAULT_PASSWORD=password
 
 JWT_SECRET=secret
 
+GOOGLE_CLIENT_ID=453564042397-4m1pr9djbq06f5rs6l9rb0nkfm0iu3hn.apps.googleusercontent.com
+GOOGLE_CLIENT_SECRET=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
+GOOGLE_CALLBACK_URL=http://localhost:3000/api/auth/google
+
 # This was inserted by `prisma init`:
 # Environment variables declared in this file are automatically made available to Prisma.
 # See the documentation for more detail: https://pris.ly/d/prisma-schema#accessing-environment-variables-from-the-schema
