Add RabbitRPC configs for Users and Auth

--- a/tsconfig.base.json
+++ b/tsconfig.base.json
@@ -17,9 +17,8 @@
     "paths": {
       "@kinopoisk-snitch/contracts": ["libs/contracts/src/index.ts"],
       "@kinopoisk-snitch/interfaces": ["libs/interfaces/src/index.ts"],
-"@kinopoisk-snitch/typeorm": ["libs/typeorm/src/index.ts"],
-
-      
+      "@kinopoisk-snitch/rmq-configs": ["libs/rmq-configs/src/index.ts"],
+      "@kinopoisk-snitch/typeorm": ["libs/typeorm/src/index.ts"]
     }
   },
   "exclude": ["node_modules", "tmp"]
