--- a/.gitignore
+++ b/.gitignore
@@ -4,7 +4,7 @@
 dist
 tmp
 /out-tsc
-package-lock.json
+/package-lock.json
 # dependencies
 node_modules
 
@@ -1306,3 +1306,4 @@ Thumbs.db
 /db/data/postmaster.opts
 /db
 /migrations
+!/package-lock.json
