--- a/package.json
+++ b/package.json
@@ -25,10 +25,12 @@
     "class-transformer": "^0.5.1",
     "class-validator": "^0.14.0",
     "dotenv": "^16.0.3",
+    "generate-password": "^1.7.0",
     "mysql2": "^3.2.4",
     "passport": "^0.6.0",
     "passport-google-oauth2": "^0.2.0",
-    "passport-jwt": "^4.0.1",
+    "passport-google-oidc": "^0.1.0",
+    "passport-jwt": "^4.0.0",
     "passport-local": "^1.0.0",
     "passport-vkontakte": "^0.5.0",
     "pg": "^8.10.0",
