--- a/.env
+++ b/.env
@@ -5,8 +5,8 @@ RABBITMQ_PASS=nestjs
 RABBITMQ_HOST=localhost:5672
 RABBITMQ_URI=amqp://nestjs:nestjs@localhost:5672
 
-POSTGRES_USER=postgres
-POSTGRES_PASSWORD=rootroot
+POSTGRES_USER=user
+POSTGRES_PASSWORD=password
 POSTGRES_DB=movies
 POSTGRES_PORT=5432
 POSTGRES_HOST=localhost
