--- a/package.json
+++ b/package.json
@@ -19,6 +19,7 @@
     "@nestjs/microservices": "^9.4.0",
     "@nestjs/passport": "^9.0.3",
     "@nestjs/platform-express": "^9.0.0",
+    "@nestjs/swagger": "^6.3.0",
     "@nestjs/typeorm": "^9.0.1",
     "@types/bcrypt": "^5.0.0",
     "axios": "^1.0.0",
@@ -38,6 +39,7 @@
     "pg": "^8.10.0",
     "reflect-metadata": "^0.1.13",
     "rxjs": "^7.0.0",
+    "swagger-ui-express": "^4.6.3",
     "tslib": "^2.3.0",
     "typeorm": "^0.3.15"
   },
