--- a/.env
+++ b/.env
@@ -3,11 +3,11 @@ RABBITMQ_DEFAULT_PASS=nestjs
 RABBITMQ_USER=nestjs
 RABBITMQ_PASS=nestjs
 RABBITMQ_HOST=localhost:5672
-RABBITMQ_URI=amqp://guest:guest@localhost:5672
+RABBITMQ_URI=amqp://nestjs:nestjs@localhost:5672
 
-POSTGRES_USER=postgres
-POSTGRES_PASSWORD=root
-POSTGRES_DB=movies2
+POSTGRES_USER=user
+POSTGRES_PASSWORD=password
+POSTGRES_DB=movies
 POSTGRES_PORT=5432
 POSTGRES_HOST=localhost
 
