Edited and fixed migrations examples files and added docker configs (got bug with RabbitMQ in the Docker)

--- a/.env
+++ b/.env
@@ -2,8 +2,7 @@ RABBITMQ_DEFAULT_USER=nestjs
 RABBITMQ_DEFAULT_PASS=nestjs
 RABBITMQ_USER=nestjs
 RABBITMQ_PASS=nestjs
-RABBITMQ_HOST=localhost:5672
-RABBITMQ_URI=amqp://nestjs:nestjs@localhost:5672
+RABBITMQ_URI=amqps://nestjs:nestjs@localhost
 
 POSTGRES_USER=user
 POSTGRES_PASSWORD=password
