--- a/apps/genres/Dockerfile
+++ b/apps/genres/Dockerfile
@@ -5,8 +5,6 @@ WORKDIR /usr/src/app
 COPY ["package*.json", "nx.json", "*.env", "*config*","./"]
 COPY ./apps/genres ./apps/genres
 COPY ./libs ./libs
-
-RUN npm install \
-    && npm install -g nx
-
-CMD nx serve genres
+RUN npm i nx
+RUN npx nx run genres:build:production
+CMD node dist/apps/genres/main.js
