--- a/apps/movies/Dockerfile
+++ b/apps/movies/Dockerfile
@@ -5,8 +5,6 @@ WORKDIR /usr/src/app
 COPY ["package*.json", "nx.json", "*.env", "*config*","./"]
 COPY ./apps/movies ./apps/movies
 COPY ./libs ./libs
-
-RUN npm install \
-    && npm install -g nx
-
-CMD nx serve movies
+RUN npm i nx
+RUN npx nx run movies:build:production
+CMD node dist/apps/movies/main.js
