--- a/apps/auth/Dockerfile
+++ b/apps/auth/Dockerfile
@@ -3,8 +3,8 @@ FROM node:18.14-alpine
 WORKDIR /usr/src/app
 
 COPY ["package*.json", "nx.json", "*.env", "*config*","./"]
-COPY ./apps/persons ./apps/persons
+COPY ./apps/auth ./apps/auth
 COPY ./libs ./libs
 RUN npm i nx
-RUN npx nx run persons:build:production
-CMD node dist/apps/persons/main.js
+RUN npx nx run auth:build:production
+CMD node dist/apps/auth/main.js
