--- a/apps/persons/project.json
+++ b/apps/persons/project.json
@@ -18,6 +18,14 @@
         "isolatedConfig": true,
         "webpackConfig": "apps/persons/webpack.config.js"
       },
+      "tasksRunnerOptions": {
+        "default": {
+          "runner": "nx/tasks-runners/default",
+          "options": {
+            "cacheableOperations": ["build", "test"]
+          }
+        }
+      },
       "configurations": {
         "development": {},
         "production": {}
