--- a/apps/movies/Dockerfile
+++ b/apps/movies/Dockerfile
@@ -5,6 +5,7 @@ WORKDIR /usr/src/app
 COPY ["package*.json", "nx.json", "*.env", "*config*","./"]
 COPY ./apps/movies ./apps/movies
 COPY ./libs ./libs
-RUN npm i nx
+RUN npm install \
+    && npm install -g nx
 RUN npx nx run movies:build:production
 CMD node dist/apps/movies/main.js
