--- a/.env
+++ b/.env
@@ -1,14 +1,12 @@
-RABBITMQ_DEFAULT_USER=nestjs
-RABBITMQ_DEFAULT_PASS=nestjs
-RABBITMQ_USER=nestjs
-RABBITMQ_PASS=nestjs
-RABBITMQ_URI=amqps://nestjs:nestjs@localhost
+RABBITMQ_USER=bveqitqw
+RABBITMQ_PASS=HZJh-TOHOOZB8rUBET0f18Fk6oBbmJ-q
+RABBITMQ_URI=amqps://bveqitqw:HZJh-TOHOOZB8rUBET0f18Fk6oBbmJ-q@gull.rmq.cloudamqp.com/bveqitqw
 
 POSTGRES_USER=user
 POSTGRES_PASSWORD=password
 POSTGRES_DB=movies
 POSTGRES_PORT=5432
-POSTGRES_HOST=localhost
+POSTGRES_HOST=postgres
 
 POSTGRES_URI=postgresql://${POSTGRES_USER}:${POSTGRES_PASSWORD}@${POSTGRES_HOST}:${POSTGRES_PORT}/${POSTGRES_DB}
 
