--- a/apps/auth/Dockerfile
+++ b/apps/auth/Dockerfile
@@ -5,6 +5,7 @@ WORKDIR /usr/src/app
 COPY ["package*.json", "nx.json", "*.env", "*config*","./"]
 COPY ./apps/auth ./apps/auth
 COPY ./libs ./libs
-RUN npm i nx
+RUN npm install \
+    && npm install -g nx
 RUN npx nx run auth:build:production
 CMD node dist/apps/auth/main.js
