--- a/apps/comments/Dockerfile
+++ b/apps/comments/Dockerfile
@@ -5,6 +5,7 @@ WORKDIR /usr/src/app
 COPY ["package*.json", "nx.json", "*.env", "*config*","./"]
 COPY ./apps/comments ./apps/comments
 COPY ./libs ./libs
-RUN npm i nx
+RUN npm install \
+    && npm install -g nx
 RUN npx nx run comments:build:production
 CMD node dist/apps/comments/main.js
