--- a/apps/countries/Dockerfile
+++ b/apps/countries/Dockerfile
@@ -5,6 +5,7 @@ WORKDIR /usr/src/app
 COPY ["package*.json", "nx.json", "*.env", "*config*","./"]
 COPY ./apps/countries ./apps/countries
 COPY ./libs ./libs
-RUN npm i nx
+RUN npm install \
+    && npm install -g nx
 RUN npx nx run countries:build:production
 CMD node dist/apps/countries/main.js
