--- a/apps/users/Dockerfile
+++ b/apps/users/Dockerfile
@@ -5,6 +5,7 @@ WORKDIR /usr/src/app
 COPY ["package*.json", "nx.json", "*.env", "*config*","./"]
 COPY ./apps/users ./apps/users
 COPY ./libs ./libs
-RUN npm i nx
+RUN npm install \
+    && npm install -g nx
 RUN npx nx run users:build:production
 CMD node dist/apps/users/main.js
