--- a/.env
+++ b/.env
@@ -2,11 +2,11 @@ RABBITMQ_USER=bveqitqw
 RABBITMQ_PASS=HZJh-TOHOOZB8rUBET0f18Fk6oBbmJ-q
 RABBITMQ_URI=amqps://bveqitqw:HZJh-TOHOOZB8rUBET0f18Fk6oBbmJ-q@gull.rmq.cloudamqp.com/bveqitqw
 
-POSTGRES_USER=user
-POSTGRES_PASSWORD=password
-POSTGRES_DB=movies
+POSTGRES_USER=postgres
+POSTGRES_PASSWORD=Kinosnatch2023
+POSTGRES_DB=postgres
 POSTGRES_PORT=5432
-POSTGRES_HOST=postgres
+POSTGRES_HOST=db.ozpczkduqvmrwdzjjfhk.supabase.co
 
 POSTGRES_URI=postgresql://${POSTGRES_USER}:${POSTGRES_PASSWORD}@${POSTGRES_HOST}:${POSTGRES_PORT}/${POSTGRES_DB}
 
