--- a/apps/countries/Dockerfile
+++ b/apps/countries/Dockerfile
@@ -2,7 +2,7 @@ FROM node:18.14-alpine
 
 WORKDIR /usr/src/app
 
-COPY ["package*.json", "nx.json", "*.env", "*config*","./"]
+COPY ["package*.json", "project.json", "*.env", "*config*","./"]
 COPY ./apps/countries ./apps/countries
 COPY ./libs ./libs
 RUN npm i nx
