--- a/apps/genres/Dockerfile
+++ b/apps/genres/Dockerfile
@@ -2,7 +2,7 @@ FROM node:18.14-alpine
 
 WORKDIR /usr/src/app
 
-COPY ["package*.json", "nx.json", "*.env", "*config*","./"]
+COPY ["package*.json", "project.json", "*.env", "*config*","./"]
 COPY ./apps/genres ./apps/genres
 COPY ./libs ./libs
 RUN npm i nx
