Edited config .env for Local RabbiMQ

--- a/.env
+++ b/.env
@@ -1,6 +1,8 @@
-RABBITMQ_USER=bveqitqw
-RABBITMQ_PASS=HZJh-TOHOOZB8rUBET0f18Fk6oBbmJ-q
-RABBITMQ_URI=amqps://bveqitqw:HZJh-TOHOOZB8rUBET0f18Fk6oBbmJ-q@gull.rmq.cloudamqp.com/bveqitqw
+RABBITMQ_USER=nestjs
+RABBITMQ_PASS=nestjs
+RABBITMQ_DEFAULT_USER=nestjs
+RABBITMQ_DEFAULT_PASS=nestjs
+RABBITMQ_URI=amqp://nestjs:nestjs@localhost:5672
 
 POSTGRES_USER=postgres
 POSTGRES_PASSWORD=Kinosnatch2023
