--- a/docker-compose.yml
+++ b/docker-compose.yml
@@ -50,19 +50,19 @@ services:
     depends_on: [api, postgres]
 
 
-#  rabbitmq:
-#    image: rabbitmq:3-management
-#    container_name: rabbitmq
-#    hostname: rabbitmq
-#    volumes:
-#      - /var/lib/rabbitmq
-#    ports:
-#      - '5672:5672'
-#      - '15672:15672'
-#    env_file:
-#      - .env
-#    networks:
-#      - rabbitmq-net
+  rabbitmq:
+    image: rabbitmq:3-management
+    container_name: rabbitmq
+    hostname: rabbitmq
+    volumes:
+      - /var/lib/rabbitmq
+    ports:
+      - '5672:5672'
+      - '15672:15672'
+    env_file:
+      - .env
+    networks:
+      - rabbitmq-net
 
   postgres:
     image: postgres
